--- a/03-FrontEnd/ecommerceAngular/package.json
+++ b/03-FrontEnd/ecommerceAngular/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.1.3",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
+    "stripe": "^9.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
